<resources>
    <string name="app_name">GPS Alarm</string>

    <!-- HINTS -->
    <string name="hintConfirmPassword">Confirm Password</string>
    <string name="hintEmail">E-mail</string>
    <string name="hintName">Name</string>
    <string name="hintPassword">Password</string>
    <string name="hintRingtone">Ringtone</string>
    <string name="hintAddress">Address</string>
    <string name="hintZipcode">Zipcode</string>
    <string name="hintLatitude">Latitude</string>
    <string name="hintLongitude">Longitude</string>

    <!-- BUTTONS -->
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="btnSave">Save</string>
    <string name="btnSignUp">Sign up </string>

    <!-- LABELS -->
    <string name="lblRegister">Register</string>
    <string name="lblWelcome">Welcome</string>
    <string name="lblAddress">Address</string>
    <string name="lblRadius">Radius:  </string>
    <string name="lblSignUp">Need an account? <u>Sign up</u></string>
    <string name="lblLogin">Already have an account? <u>Login</u></string>
    <string name="lblControlPanel">Control Panel</string>
    <string name="lblAddressOne">ADDRESS #1</string>
    <string name="lblAddressTwo">ADDRESS #2</string>

    <!-- IMAGES -->
    <string name="imgText">TODO</string>

    <!-- USER PREFERENCES -->
    <bool name="userLoggedIn">false</bool>
    <string name="username">com.cs246.gpsalarm.USERNAME</string>
    <string name="userid">com.cs246.gpsalarm.USERID</string>

    <!-- Strings used for fragments for navigation -->
    <string name="title_activity_addresses">AddressesActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps2">Map</string>
</resources>
