<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".RegisterActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#0B7280">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:paddingLeft="35dp"
            android:paddingRight="35dp">

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="casual"
                android:paddingBottom="10dp"
                android:text="@string/lblRegister"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textSize="26sp"
                android:textStyle="bold" />

            <!-- Name of the user will not be necessary
            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="casual"
                android:hint="@string/hintName"
                android:paddingBottom="15dp"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#FFFFFF" />
                -->

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="casual"
                android:hint="@string/hintEmail"
                android:inputType="textEmailAddress"
                android:paddingBottom="15dp"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#FFFFFF" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:hint="@string/hintPassword"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#FFFFFF" />

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:hint="@string/hintConfirmPassword"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#FFFFFF" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:background="#FFFFFF"
                android:text="@string/btnSignUp"
                android:textColor="#0B7280"
                android:textCursorDrawable="@drawable/rounded_button_transparent"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:padding="10dp"
                android:text="@string/lblLogin"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>