<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddressActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:paddingLeft="35dp"
            android:paddingRight="35dp">

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="casual"
                android:paddingBottom="10dp"
                android:text="@string/lblAddress"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#0B7280"
                android:textSize="26sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:fontFamily="casual"
                    android:hint="@string/hintAddress"
                    android:maxWidth="200dp"
                    android:paddingBottom="15dp"
                    android:textColor="#0B7280"
                    android:textColorHighlight="#0B7280"
                    android:textColorHint="#0B7280"
                    android:textColorLink="#0B7280"/>

                <ImageButton
                    android:id="@+id/search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:onClick="lookAllPossibleAddresses"
                    android:src="@drawable/ic_action_name"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:onClick="useMaps"
                    android:src="@drawable/ic_maps" />




            </LinearLayout>



            <!--
            <EditText
                android:id="@+id/txtZipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="casual"
                android:hint="@string/hintZipcode"
                android:inputType="number"
                android:paddingBottom="15dp"
                android:textColor="#0B7280"
                android:textColorHighlight="#0B7280"
                android:textColorHint="#0B7280"
                android:textColorLink="#0B7280" />
                -->

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view_spinner"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblRadius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:inputType="text"
                    android:paddingLeft="05dp"
                    android:paddingBottom="15dp"
                    android:text="@string/lblRadius"
                    android:textColor="#0B7280"
                    android:textColorHighlight="#0B7280"
                    android:textColorHint="#0B7280"
                    android:textColorLink="#0B7280"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtRadius"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:paddingBottom="15dp"
                    android:textColor="#0B7280"
                    android:textColorHighlight="#0B7280"
                    android:textColorHint="#0B7280"
                    android:textColorLink="#0B7280" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:paddingBottom="18sp"
                    android:text="miles"
                    android:textColor="#0B7280"
                    android:textColorHighlight="#0B7280"
                    android:textColorHint="#0B7280"
                    android:textColorLink="#0B7280" />

                <Switch
                    android:id="@+id/switchUnitDistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="#0B7280"
                    android:textColorHighlight="#0B7280"
                    android:textColorHint="#0B7280"
                    android:textColorLink="#0B7280" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:paddingBottom="18sp"
                    android:text="km"
                    android:textColor="#0B7280"
                    android:textColorHighlight="#0B7280"
                    android:textColorHint="#0B7280"
                    android:textColorLink="#0B7280" />

            </LinearLayout>

            <EditText
                android:id="@+id/latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="casual"
                android:hint="@string/hintLatitude"
                android:inputType="number"
                android:paddingBottom="15dp"
                android:textColor="#0B7280"
                android:textColorHighlight="#0B7280"
                android:textColorHint="#0B7280"
                android:textColorLink="#0B7280" />

            <EditText
                android:id="@+id/longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="casual"
                android:hint="@string/hintLongitude"
                android:inputType="number"
                android:paddingBottom="15dp"
                android:textColor="#0B7280"
                android:textColorHighlight="#0B7280"
                android:textColorHint="#0B7280"
                android:textColorLink="#0B7280" />

            <Button
                android:id="@+id/ringtone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:hint="@string/hintRingtone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingBottom="15dp"
                android:textColor="#0B7280"
                android:textColorHighlight="#0B7280"
                android:textColorHint="#0B7280"
                android:textColorLink="#0B7280" />
            <TextView
                android:id="@+id/output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:layout_gravity="center"
                android:textColor="#0B7280"
                android:textColorHighlight="#0B7280"
                android:textColorHint="#0B7280"
                android:textColorLink="#0B7280"
                android:textSize="20sp" />


            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="100dp"
                android:background="#FFFFFF"
                android:onClick="saveAddress"
                android:text="@string/btnSave"
                android:textAllCaps="true"
                android:textColor="#0B7280"
                android:textCursorDrawable="@drawable/rounded_button_transparent"
                android:textSize="15sp" />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>