<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ControlPanelActivityOLD">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="35dp"
            android:paddingTop="50dp"
            android:paddingRight="35dp">

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="casual"
                android:paddingBottom="20dp"
                android:text="@string/lblControlPanel"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#0B7280"
                android:textSize="26sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#0B7280" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/editAddressOne"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="15dp"
                    android:background="@color/common_google_signin_btn_text_dark_default"
                    app:srcCompat="@android:drawable/ic_menu_edit" />

                <TextView
                    android:id="@+id/textAddressOne"
                    android:layout_width="180sp"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:padding="25dp"
                    android:text="@string/lblAddressOne"
                    android:gravity="center_vertical|left"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="#0B7280"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <Switch
                    android:id="@+id/switchAddressOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#0B7280"
                    android:textColorHighlight="#0B7280"
                    android:textColorHint="#0B7280"
                    android:textColorLink="#0B7280" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#0B7280" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/editAddressTwo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="15dp"
                    android:background="@color/common_google_signin_btn_text_dark_default"
                    app:srcCompat="@android:drawable/ic_menu_edit" />

                <TextView
                    android:id="@+id/textAddressTwo"
                    android:layout_width="180sp"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:padding="25dp"
                    android:text="@string/lblAddressTwo"
                    android:gravity="center_vertical|left"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="#0B7280"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <Switch
                    android:id="@+id/switchAddressTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#0B7280"
                    android:textColorHighlight="#0B7280"
                    android:textColorHint="#0B7280"
                    android:textColorLink="#0B7280" />



            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#0B7280" />

            <!-- TO BE REMOVED

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Username" />

            <EditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="admin@gmail.com" />

            <Button
                android:id="@+id/btnInsert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="insertData"
                android:text="Insert" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="updateData"
                android:text="Update" />

            <Button
                android:id="@+id/btnRead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="readData"
                android:text="Read Data" />
        -->

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

